# iv

./: .travis.yml  CMakeLists.txt  INSTALL  Makefile.in  README  acinclude.m4  build.sh  chkstream.m4  config.h  config.h.in  configure.in  howtomingw  iv-config.cmake  iv_def.h  makedist  mkinstalldirs
.github/workflows/: IV.yml
cmake/: HelperFunctions.cmake  IVPlatformHelper.cmake  PlatformHelper.cmake  RpathHelper.cmake  iv-config.cmake  iv-config.cmake.in
src/: Makefile.in
src/include/: Makefile.in  ivcarbon.h  ivmcw.h  ivversion.h
src/include/Dispatch/: dispatcher.h  dp.h  enter-scope.h  iocallback.h  iohandler.h  iostreamb.h  rpcbuf.h  rpcpeer.h  rpcreader.h  rpcregistry.h  rpcservice.h  rpcstream.h  rpcwriter.h
src/include/IV-2_6/InterViews/: adjuster.h  banner.h  box.h  button.h  compeditor.h  control.h  deck.h  defs.h  dialog.h  filebrowser.h  filechooser.h  frame.h  ihandler.h  interactor.h  iwindow.h  matcheditor.h  message.h  minmax.h  painter.h  panner.h  perspective.h  rubband.h  rubgroup.h  scene.h  scroller.h  sensor.h  shape.h  strbrowser.h  strchooser.h  streditor.h  subject.h  textbuffer.h  textdisplay.h  texteditor.h  tray.h  world.h
src/include/IV-Mac/: bitmap.h  brush.h  canvas.h  color.h  cursor.h  event.h  font.h  mprinter.h  raster.h  session.h  window.h
src/include/IV-Win/: MWapp.h  MWlib.h  MWpoint.h  MWrect.h  bitmap.h  brush.h  canvas.h  color.h  cursor.h  event.h  font.h  mprinter.h  raster.h  session.h  window.h
src/include/IV-X11/: Xdefs.h  Xlib.h  Xundefs.h  Xutil.h  ivx11_assign.h  ivx11_declare.h  ivx11_define.h  ivx11_dynam.h  ivx11_redef.h  xbitmap.h  xcanvas.h  xcolor.h  xdrag.h  xevent.h  xfont.h  xpainter.h  xraster.h  xwindow.h
src/include/IV-look/: bevel.h  browser.h  fchooser.h  field.h  mw_kit.h
src/include/InterViews/: _gendefs  action.h  bitmap.h  box.h  brush.h  canvas.h  color.h  composition.h  cursor.h  deck.h  dialog.h  display.h  drag.h  event.h  font.h  handler.h  hit.h  input.h  iv3text.h  iv3textbuffer.h  lrmarker.h  page.h  printer.h  psfont.h  scrbox.h  selection.h  session.h  shadow.h  style.h  telltale.h  tiff.h  transformer.h  winbmp.h  window.h  xymarker.h
src/include/OS/: _gendefs  _undefs.h  dirent.h  math.h  types.h
src/include/TIFF/: tiff.h  tiffio.h
src/include/Unidraw/: _defines.h  _gendefs  _undefs.h  catalog.h  clipboard.h  creator.h  dialogs.h  editor.h  editorinfo.h  grid.h  manip.h  manips.h  path.h  selection.h  statevar.h  statevars.h  stateview.h  stateviews.h  transfn.h  transfns.h  uctrl.h  uhash.h  ulist.h  unidraw.h
src/include/Unidraw/Commands/: align.h  brushcmd.h  catcmds.h  colorcmd.h  command.h  edit.h  font.h  import.h  macro.h  nop.h  patcmd.h  struct.h  transforms.h  viewcmds.h
src/include/Unidraw/Components/: component.h  compview.h  connector.h  csolver.h  ellipse.h  externview.h  grcomp.h  grview.h  line.h  link.h  pad.h  pin.h  (+9 more)
src/lib/: CMakeLists.txt  Makefile.in
src/lib/Dispatch/: dispatcher.cpp  iohandler.cpp  iostreamb.cpp  rpcbuf.cpp  rpchdr.cpp  rpcpeer.cpp  rpcreader.cpp  rpcregistry.cpp  rpcservice.cpp  rpcstream.cpp  rpcwriter.cpp
src/lib/IV-2_6/: adjuster2_6.cpp  banner.cpp  border2_6.cpp  box2_6.cpp  button2_6.cpp  compeditor.cpp  control.cpp  deck2_6.cpp  dialog2_6.cpp  filebrowser.cpp  filechooser.cpp  frame.cpp  glue2_6.cpp  interactor.cpp  matcheditor.cpp  menu2_6.cpp  message.cpp  painter.cpp  panner2_6.cpp  perspective.cpp  rubband.cpp  rubcurve.cpp  rubgroup.cpp  rubline.cpp  rubrect.cpp  rubverts.cpp  scene.cpp  scrollbar2_6.cpp  scroller2_6.cpp  sensor.cpp  shape.cpp  strbrowser.cpp  strchooser.cpp  streditor.cpp  subject.cpp  textbuffer.cpp  textdisplay.cpp  texteditor.cpp  tform2_6.cpp  tray.cpp  (+7 more)
src/lib/IV-Mac/: bitmap.cpp  brush.cpp  canvas.cpp  carbevent.cpp  color.cpp  cursor.cpp  display.cpp  event.cpp  font.cpp  mprinter.cpp  raster.cpp  session.cpp  window.cpp
src/lib/IV-Win/: bitmap.cpp  brush.cpp  canvas.cpp  canvas16.cpp  canvas32.cpp  color.cpp  cursor.cpp  display.cpp  event.cpp  font.cpp  ivclean.cpp  mprinter.cpp  mwapp.cpp  mwlib.cpp  raster.cpp  session.cpp  window.cpp
src/lib/IV-X11/: glcontext.cpp  session.cpp  xbitmap.cpp  xbrush.cpp  xcanvas.cpp  xcolor.cpp  xcursor.cpp  xdrag.cpp  xevent.cpp  xfont.cpp  xraster.cpp  xreqerr.cpp  xselection.cpp  xwindow.cpp
src/lib/InterViews/: action.cpp  adjust.cpp  aggr.cpp  align.cpp  alloctbl.cpp  arrcomp.cpp  background.cpp  bevel.cpp  border.cpp  box.cpp  browser.cpp  button.cpp  character.cpp  compositor.cpp  comption.cpp  debug.cpp  deck.cpp  dialogs.cpp  fbrowser.cpp  fchooser.cpp  field.cpp  geometry.cpp  glyph.cpp  group.cpp  handler.cpp  hit.cpp  image.cpp  input.cpp  iv3text.cpp  iv3textbuffer.cpp  kit.cpp  label.cpp  layout.cpp  lrmarker.cpp  menu.cpp  mf_dialogs.cpp  mf_kit.cpp  mono_kit.cpp  monoglyph.cpp  observe.cpp  (+29 more)
src/lib/OS/: directory.cpp  dirent.cpp  file.cpp  host.cpp  listimpl.cpp  math.cpp  memory.cpp  string.cpp  ustring.cpp
src/lib/TIFF/: CHANGES-v2.3  CHANGES-v2.4  CHANGES-v2.5  CHANGES-v3.0  HOWTO  README  machdep.h  mkg3states.c  mkspans.c  prototypes.h  t4.h  tif_aux.c  tif_ccittrle.c  tif_close.c  tif_cmprs.c  tif_compat.c  tif_dir.c  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_fax3.c  tif_fax3.h  tif_fax4.c  tif_flush.c  tif_getimage.c  tif_jpeg.c  tif_lzw.c  tif_machdep.c  tif_next.c  tif_open.c  tif_packbits.c  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_thunder.c  tif_tile.c  tif_version.c  (+4 more)
src/lib/Unidraw/: align.cpp  brushcmd.cpp  catalog.cpp  catcmds.cpp  cglue.cpp  clipboard.cpp  colorcmd.cpp  command.cpp  component.cpp  compview.cpp  connect.cpp  connector.cpp  creator.cpp  csolver.cpp  ctrlinfo.cpp  damage.cpp  data.cpp  datas.cpp  dialogs.cpp  edit.cpp  editor.cpp  editorinfo.cpp  ellipse.cpp  ellipses.cpp  externview.cpp  font.cpp  geomobjs.cpp  globals.cpp  graphic.cpp  grblock.cpp  grcomp.cpp  grcomptool.cpp  grid.cpp  grview.cpp  gvupdater.cpp  import.cpp  iterator.cpp  keymap.cpp  kybd.cpp  line.cpp  (+54 more)
src/lib/x11_dynam/: ivx11_dynam.cpp  ivx11_dynamlib.cpp  mkdynam.py  x11_used_funs
(+24 files in other folders)
